--- a/app/views/attachments/_attachment_fields.html.haml
+++ b/app/views/attachments/_attachment_fields.html.haml
@@ -1,5 +1,5 @@
 .nested-fields
   .field
-    = f.label :file, class: "hidden"
+    = f.label      :file, class: "hidden"
     = f.file_field :file
-    = link_to_remove_association 'Удалить файл', f
+    = link_to_remove_association t('.delete_link'), f
