--- a/app/views/comments/_comments.html.haml
+++ b/app/views/comments/_comments.html.haml
@@ -1,4 +1,4 @@
 .comments
   - if commentable.comments.any?
     - commentable.comments.asc.each do |comment|
-      = render 'common/comment_content', comment: comment
+      = render 'comments/comment_content', comment: comment
