--- a/app/assets/stylesheets/search.scss
+++ b/app/assets/stylesheets/search.scss
@@ -1,3 +1,13 @@
 // Place all the styles related to the Search controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+@import "bootstrap";
+.search_results {
+  @extend .col-lg-8;
+  @extend .col-lg-offset-1;
+
+  .result {
+    border-bottom: 2px solid #939393;
+    margin-top: 10px;
+  }
+}
