Cache Question show

--- a/app/views/attachments/_attachments.html.haml
+++ b/app/views/attachments/_attachments.html.haml
@@ -3,9 +3,10 @@
   %table
     %tr
       - object.attachments.each do |attachment|
-        %td= link_to attachment.file.identifier, attachment.file.url
-        - if can? :update, object
-          %td= link_to t('.delete'), send("#{object.model_name.singular}_path".to_sym,
-            object,
-            object.model_name.singular.to_sym => { attachments_attributes: { id: attachment.id, "_destroy" => true } }),
-            remote: true, method: :patch
+        - cache [attachment, current_user] do
+          %td= link_to attachment.file.identifier, attachment.file.url
+          - if can? :update, object
+            %td= link_to t('.delete'), send("#{object.model_name.singular}_path".to_sym,
+              object,
+              object.model_name.singular.to_sym => { attachments_attributes: { id: attachment.id, "_destroy" => true } }),
+              remote: true, method: :patch
