--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,6 +14,7 @@
  *= require_self
  */
 @import "bootstrap-sprockets";
+$icon-font-path: "bootstrap/";
 @import "bootstrap";
 
 input[type=submit] { @extend .btn; @extend .btn-primary }
