--- a/app/views/questions/show.html.haml
+++ b/app/views/questions/show.html.haml
@@ -18,3 +18,4 @@
 
 = subscribe_to "/questions/#{@question.id}/answer"
 = subscribe_to "/questions/#{@question.id}/comment"
+= subscribe_to "/questions/#{@question.id}/answer/destroy"
